--- a/pages/login/login.css
+++ b/pages/login/login.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    background:#fff;
+    background-color: #fff;
 }
 #login-signup-popup{
     display: flex;
